en html titre et diverses div

--- a/sudoku.html
+++ b/sudoku.html
@@ -7,6 +7,15 @@
     <title>Sudoku</title>
 </head>
 <body>
-    
+    <h1>Sudoku</h1>
+    <hr>
+    <!-- trait de séparation dans le texte utilisée avec SIZE, WIDTH, ALIGN ou NOSHADE pour modifier de l'aspect du trait. -->
+    <h2 id="errors">0</h2>
+
+    <!-- 9x9 board -->
+    <div id="board"></div>
+    <br>
+    <div id="digits">
+    </div>
 </body>
 </html>
