--- a/sudoku.html
+++ b/sudoku.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudoku</title>
+        
+    <link rel="stylesheet" href="sudoku.css">
+    <script src="sudoku.js"></script>
 </head>
 <body>
     <h1>Sudoku</h1>
